--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="google-site-verification" content="W1NnLaMJfLYN1RJwlVij16P2GeXT7n2srit724qCJ2E" />
+	<meta name="description" content="The best designs and price of wooden lamps" />
 	<meta name="google-site-verification" content="M0vM43rWzFVSW9TMgt0SjITwxvksWGAEhFN6CO8SaRU" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
