--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>WOODCRAFTHOUSE |home</title>
+	<title>WOODCRAFTHOUSE</title>
 	
     <link rel="icon" type="image/png" href="images/wood.png"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
