--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="images/wood.png"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="google-site-verification" content="1R8hXxekKrUKWXyoVxQG0vDu8MLj7EtEV_LIDwVMyr8" />
 	<meta name="google-site-verification" content="W1NnLaMJfLYN1RJwlVij16P2GeXT7n2srit724qCJ2E" />
 	<meta name="description" content="The best designs and price of wooden lamps" />
 	<meta name="google-site-verification" content="M0vM43rWzFVSW9TMgt0SjITwxvksWGAEhFN6CO8SaRU" />
