--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="google-site-verification" content="1R8hXxekKrUKWXyoVxQG0vDu8MLj7EtEV_LIDwVMyr8" />
 	<meta name="google-site-verification" content="W1NnLaMJfLYN1RJwlVij16P2GeXT7n2srit724qCJ2E" />
+	<script data-ad-client="ca-pub-6635003995112484" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta name="description" content="The best designs and price of wooden lamps" />
 	<meta name="google-site-verification" content="M0vM43rWzFVSW9TMgt0SjITwxvksWGAEhFN6CO8SaRU" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
