--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 	</div>
 	</div>
 	</div>
+<script data-ad-client="ca-pub-6635003995112484" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<div class="footer">
 		<div class="footer-top">
 			
