--- a/lamp3.html
+++ b/lamp3.html
@@ -229,9 +229,11 @@
 				  <div class="clear"></div>
 			 </div>
        	    </div>
-       	    
+		  
+       	    <script data-ad-client="ca-pub-6635003995112484" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
        	 </div>
        	 <div class="copy">
+		 
        	   <div class="wrap">
        	   	  <p>© All rights reserved | Created by&nbsp;<a href="#">Ismail</a></p>
        	   </div>
