--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="images/wood.png"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="wooden lamps">
+	<meta name="keywords" content="woodcrafthouse">
 	<meta name="google-site-verification" content="1R8hXxekKrUKWXyoVxQG0vDu8MLj7EtEV_LIDwVMyr8" />
 	<meta name="google-site-verification" content="W1NnLaMJfLYN1RJwlVij16P2GeXT7n2srit724qCJ2E" />
 	<script data-ad-client="ca-pub-6635003995112484" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
