--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="wooden lamps">
 	<meta name="keywords" content="woodcrafthouse">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1BEPWYQPLX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1BEPWYQPLX');
+</script>
 	<meta name="google-site-verification" content="1R8hXxekKrUKWXyoVxQG0vDu8MLj7EtEV_LIDwVMyr8" />
 	<meta name="google-site-verification" content="W1NnLaMJfLYN1RJwlVij16P2GeXT7n2srit724qCJ2E" />
 	<script data-ad-client="ca-pub-6635003995112484" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
