--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="wooden lamps">
+	<meta name="google-site-verification" content="ZIsSXExgC9fHwtyveVbnpBpBuaC1STOMgeXsLRP28tI" />
 	<meta name="keywords" content="woodcrafthouse">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1BEPWYQPLX"></script>
